--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -12,7 +12,7 @@
             </ion-item>
             <ion-item>
                 <ion-icon slot="start" size="small" name="key-outline"></ion-icon>
-                <ion-input [type]="passwordShowHide.type" placeholder="លេខកូដសម្ងាត់" padding formControlName="password"></ion-input>
+                <ion-input [type]="passwordShowHide.type" placeholder="លេខកូដសម្ងាត់" formControlName="password"></ion-input>
                 <ion-icon (click)="showHidePassword()" [name]="passwordShowHide.showHideIcon" size="small" slot="end"></ion-icon>
             </ion-item>
 
