--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -20,7 +20,7 @@ ion-content {
     vertical-align: middle;
 
     .main-section {
-        background-color: var(--ion-color-primary);
+        // background-color: var(--ion-color-primary);
         width: 80%;
         height: 50%;
         position: absolute;
@@ -34,22 +34,6 @@ ion-content {
             height: 100%;
             padding: 5% 0;
             --box-shadow: 0 10px 10px -5px;
-
-            ion-row {
-                height: 50%;
-
-                ion-col {
-                    padding: 0;
-                }
-            }
-
-            .border-b {
-                border-bottom: 1px solid var(--ion-color-success-tint);
-            }
-
-            .border-r {
-                border-right: 1px solid var(--ion-color-success-tint);
-            }
 
             .btn-section {
                 height: 100%;
