--- a/src/global.scss
+++ b/src/global.scss
@@ -85,8 +85,9 @@ ion-content {
 }
 
 ion-card {
+    border-radius: 10px;
 
-    .doc-card {
+    &.doc-card {
         padding-left: 10px;
         padding-right: 10px;
         padding-top: 5px;
