--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -8,16 +8,16 @@
         <form [formGroup]="loginForm">
             <ion-item class="ion-margin-bottom">
                 <ion-icon slot="start" size="small" name="person-outline"></ion-icon>
-                <ion-input placeholder="ឈ្មោះប្រើប្រាស់" padding required formControlName="userName"></ion-input>
+                <ion-input placeholder="{{ 'USERNAME' | translate }}" padding required formControlName="userName"></ion-input>
             </ion-item>
             <ion-item>
                 <ion-icon slot="start" size="small" name="key-outline"></ion-icon>
-                <ion-input [type]="passwordShowHide.type" placeholder="លេខកូដសម្ងាត់" formControlName="password"></ion-input>
+                <ion-input [type]="passwordShowHide.type" placeholder="{{ 'PASSWORD' | translate }}" formControlName="password"></ion-input>
                 <ion-icon (click)="showHidePassword()" [name]="passwordShowHide.showHideIcon" size="small" slot="end"></ion-icon>
             </ion-item>
 
             <ion-button class="btn-login" color="secondary" (click)="login()" type="submit">
-                <ion-label color="light">ចូលក្នុងប្រព័ន្ធ</ion-label>
+                <ion-label color="light">{{ 'LOGIN' | translate }}</ion-label>
             </ion-button>
         </form>
         <ion-spinner *ngIf="isFetching" name="lines" color="light"></ion-spinner>
