--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -6,6 +6,11 @@ ion-content {
     width: 100%;
     margin: 0;
 
+    .lang-icon {
+        width: 50px;
+        height: 20px;
+    }
+
     .logo-wrapper {
         display: -webkit-box;
         height: 40%;
