--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -45,8 +45,10 @@
                 <ion-title color="light">
                     KG-ALL
                 </ion-title>
-                <ion-buttons class="phone-icon" slot="end" (click)="contactUs()">
-                    <ion-icon color="light" name="call" mode="md"></ion-icon>
+                <ion-buttons class="phone-icon" slot="end" (click)="changeLanguage()">
+                    <ion-button>
+                        <ion-img class="lang-icon" [src]="langIconSrc"></ion-img>
+                    </ion-button>
                 </ion-buttons>
             </ion-toolbar>
         </ion-header>
