--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,8 +1,8 @@
 <ion-content center text-center class="background">
     <ion-toolbar color="primary">
-        <ion-buttons slot="end">
+        <ion-buttons (click)="changeLanguage()" slot="end">
             <ion-button>
-                <ion-img (click)="changeLanguage()" class="lang-icon" [src]="langIconSrc"></ion-img>
+                <ion-img class="lang-icon" [src]="langIconSrc"></ion-img>
             </ion-button>
         </ion-buttons>
     </ion-toolbar>
