--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -16,11 +16,11 @@
                     <div *ngFor="let page of pages">
                         <ion-item *ngIf="page.path" (click)="goToOtherPage(page.path)">
                             <ion-icon class="ion-padding-end" [name]="page.icon" size="small" mode="md"></ion-icon>
-                            {{page.name | translate}}
+                            {{ page.name | translate }}
                         </ion-item>
                         <ion-item *ngIf="!page.path && page.name === 'SIDE_MENU.CONTACT_US'" (click)="contactUs()">
                             <ion-icon class="ion-padding-end" [name]="page.icon" size="small" mode="md"></ion-icon>
-                            {{page.name | translate}}
+                            {{ page.name | translate }}
                         </ion-item>
                     </div>
                 <!-- </ion-menu-toggle> -->
@@ -31,7 +31,7 @@
             <ion-toolbar class="text-center">
                 <ion-button (click)="logout()" color="secondary">
                     <ion-icon name="log-out-outline"></ion-icon>
-                    <ion-label color="light">ចាកចេញ</ion-label>
+                    <ion-label color="light">{{ 'LOGOUT' | translate }}</ion-label>
                 </ion-button>
             </ion-toolbar>
         </ion-footer>
@@ -103,54 +103,3 @@
         </ion-content>
     </ion-router-outlet>
 </ion-app>
-
-<!-- <ion-content>
-    <ion-card class="main-section border-primary">
-        <ion-grid class="second-section" fixed shadow>
-            <ion-row class="border-b">
-                <ion-col class="border-r" size="6">
-                    <div class="btn-section">
-                        <div class="div-btn text-center" (click)="goToOtherPage('general')">
-                            <div>
-                                <ion-icon color="light" name="briefcase"></ion-icon>
-                            </div>
-                            <ion-label class="text-bold" color="light">ពត៌មានទូទៅ</ion-label>
-                        </div>
-                    </div>
-                </ion-col>
-                <ion-col size="6">
-                    <div class="btn-section">
-                        <div class="div-btn text-center" (click)="goToOtherPage('obligation')">
-                            <div>
-                                <ion-icon color="light" name="list"></ion-icon>
-                            </div>
-                            <ion-label class="text-bold" color="light">ស្ថានភាពក្រុមហ៊ុន</ion-label>
-                        </div>
-                    </div>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col class="border-r" size="6">
-                    <div class="btn-section">
-                        <div class="div-btn text-center" (click)="goToOtherPage('tax-calculation')">
-                            <div>
-                                <ion-icon color="light" name="calculator"></ion-icon>
-                            </div>
-                            <ion-label class="text-bold" color="light">ការគណនាពន្ធ</ion-label>
-                        </div>
-                    </div>
-                </ion-col>
-                <ion-col size="6">
-                    <div class="btn-section">
-                        <div class="div-btn text-center">
-                            <div>
-                                <ion-icon color="light" name="card"></ion-icon>
-                            </div>
-                            <ion-label class="text-bold" color="light">សេវាកម្ម</ion-label>
-                        </div>
-                    </div>
-                </ion-col>
-            </ion-row>
-        </ion-grid>
-    </ion-card>
-</ion-content> -->
