--- a/src/app/pages/tax-calculation/salary-tax/salary-tax.page.html
+++ b/src/app/pages/tax-calculation/salary-tax/salary-tax.page.html
@@ -57,21 +57,57 @@
 				<div class="ion-margin-top">
 					<ion-row>
 						<ion-col class="ion-no-padding ion-padding-end" size="5">
-							<ion-button type="reset" fill="outline" class="w-100-p btn-calculation" (click)="reset()">
+							<ion-button fill="outline" class="w-100-p btn-calculation" (click)="resetForm()">
 								<ion-label>កំណត់ឡើងវិញ</ion-label>
 							</ion-button>
 						</ion-col>
 						<ion-col class="ion-no-padding" size="7">
-							<ion-button color="primary" type="submit" class="w-100-p btn-calculation" (click)="calculation()">
-								<ion-label color="light">គណនាពន្ធ</ion-label>
+							<ion-button color="primary" type="submit" class="w-100-p btn-calculation" (click)="saveForCalculation()">
+								<ion-label color="light">រក្សាទុកសម្រាប់ការគណនា</ion-label>
 							</ion-button>
+						</ion-col>
+					</ion-row>
+				</div>
+				<!-- For card input -->
+				<div *ngIf="cardInputArray.length > 0" class="card-input-wrapper ion-margin-top">
+					<ion-label class="title">បញ្ជីបុគ្គលិក</ion-label>
+					<ion-slides class="ion-padding-vertical" mode="ios" scrollbar="true" [options]="{ slidesPerView: 'auto', zoom: false, grabCursor: true }">
+						<ion-slide *ngFor="let item of cardInputArray; let index = index">
+								<ion-card class="card-input ion-no-margin">
+									<ion-card-content class="ion-text-center">
+										<ion-label color="light">បុគ្គលិក {{index + 1}}</ion-label>
+										<ion-buttons class="ion-margin-top">
+											<ion-button>
+												<ion-label color="light">កែប្រែ</ion-label>
+												<ion-icon color="light" size="small" name="create-outline"></ion-icon>
+											</ion-button>
+										</ion-buttons>
+										<ion-buttons>
+											<ion-button>
+												<ion-label color="light">មើល</ion-label>
+												<ion-icon color="light" size="small" name="eye-outline"></ion-icon>
+											</ion-button>
+										</ion-buttons>
+									</ion-card-content>
+								</ion-card>
+						</ion-slide>
+					</ion-slides>
+				</div>
+				<div class="ion-margin-top">
+					<ion-row>
+						<ion-col class="ion-no-padding" size="12">
+							<ion-col class="ion-no-padding" size="7">
+								<ion-button color="primary" type="submit" class="w-100-p btn-calculation" (click)="calculation()">
+									<ion-label color="light">គណនាពន្ធ</ion-label>
+								</ion-button>
+							</ion-col>
 						</ion-col>
 					</ion-row>
 				</div>
 			</form>
 		</div>
 		<!-- Result of calculation -->
-		<div class="ion-padding-horizontal">
+		<div hidden="true" class="ion-padding-horizontal">
 			<div class="ion-text-center ion-margin-top">
 				<strong>លទ្ធផលនៃការគណនាពន្ធ</strong>
 			</div>
@@ -99,26 +135,6 @@
 									</ion-label> -->
 								</ion-col>
 							</ion-item>
-							<!-- <ion-item>
-								<ion-col>
-									<ion-label color="light">អត្រាពន្ធ ៖</ion-label>
-									<ion-label color="light">
-										<strong>
-											{{calucationResults.rentingTax | number}} រៀល
-										</strong>
-									</ion-label>
-								</ion-col>
-							</ion-item>
-							<ion-item>
-								<ion-col>
-									<ion-label color="light">ពន្ធកាត់ទុកលើការសេវាកម្ម ១៥% ៖</ion-label>
-									<ion-label color="light">
-										<strong>
-											{{calucationResults.serviceTax | number}} រៀល
-										</strong>
-									</ion-label>
-								</ion-col>
-							</ion-item> -->
 						</ion-list>
 					</ion-card-content>
 				</ion-card>
