Yoo translation on MOC page

--- a/src/app/pages/general/general.page.html
+++ b/src/app/pages/general/general.page.html
@@ -5,12 +5,12 @@
     <ion-tab-button tab="moc">
       <!-- <ion-icon name="home"></ion-icon> -->
       <ion-icon size="large" name="business"></ion-icon>
-      <ion-label class="text-bold ion-no-margin">ក្រសួងពាណិជ្ជកម្ម</ion-label>
+      <ion-label class="text-bold ion-no-margin">{{ 'MOC.HEADER' | translate }}</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tax">
       <ion-icon size="large" name="newspaper"></ion-icon>
-      <ion-label class="text-bold ion-no-margin">អគ្គនាយកដ្ឋានពន្ធដារ</ion-label>
+      <ion-label class="text-bold ion-no-margin">{{ 'GDT' | translate }}</ion-label>
     </ion-tab-button>
 
   </ion-tab-bar>
