--- a/src/app/pages/general/tax-tap/tax-tap.page.html
+++ b/src/app/pages/general/tax-tap/tax-tap.page.html
@@ -3,7 +3,7 @@
         <ion-buttons (click)="backHome()" class="ion-margin-start" slot="start">
             <ion-icon size="large" color="light" name="arrow-back-outline"></ion-icon>
         </ion-buttons>
-        <ion-title color="light">អគ្គនាយកដ្ឋានពន្ធដារ</ion-title>
+        <ion-title color="light">{{ 'GDT' | translate }}</ion-title>
     </ion-toolbar>
 </ion-header>
 <ion-content>
