--- a/src/app/pages/obligation/obligation.page.html
+++ b/src/app/pages/obligation/obligation.page.html
@@ -5,12 +5,12 @@
       <ion-tab-button tab="tax-per-months">
         <!-- <ion-icon name="home"></ion-icon> -->
         <ion-icon size="large" name="list"></ion-icon>
-        <ion-label class="text-bold ion-no-margin">ពន្ធប្រចាំខែ</ion-label>
+        <ion-label class="text-bold ion-no-margin">{{ 'COMPANY_STATUS.TAB1' | translate }}</ion-label>
       </ion-tab-button>
   
       <ion-tab-button tab="tax-per-years">
         <ion-icon size="large" name="newspaper"></ion-icon>
-        <ion-label class="text-bold ion-no-margin">ពន្ធប្រចាំឆ្នាំ</ion-label>
+        <ion-label class="text-bold ion-no-margin">{{ 'COMPANY_STATUS.TAB2' | translate }}</ion-label>
       </ion-tab-button>
   
     </ion-tab-bar>
