--- a/src/app/pages/obligation/tax-per-months/tax-per-months.page.html
+++ b/src/app/pages/obligation/tax-per-months/tax-per-months.page.html
@@ -3,7 +3,7 @@
         <ion-buttons (click)="backHome()" class="ion-padding-horizontal" slot="start">
             <ion-icon size="large" color="light" name="arrow-back-outline"></ion-icon>
         </ion-buttons>
-        <ion-title color="light">ស្ថានភាពក្រុមហ៊ុន</ion-title>
+        <ion-title color="light">{{ 'COMPANY_STATUS.HEADER' | translate }}</ion-title>
     </ion-toolbar>
 </ion-header>
 
