--- a/src/app/pages/tax-calculation/salary-tax/salary-tax.page.html
+++ b/src/app/pages/tax-calculation/salary-tax/salary-tax.page.html
@@ -3,7 +3,7 @@
 		<ion-buttons (click)="backTaxCalculation()" class="ion-padding-horizontal" slot="start">
 			<ion-icon size="large" color="light" name="arrow-back-outline"></ion-icon>
 		</ion-buttons>
-		<ion-title color="light">ការគណនាពន្ធលើប្រាក់បៀវត្សបុគ្គលិក</ion-title>
+		<ion-title color="light">{{ 'TAX_CALCULATION.BTN2' | translate }}</ion-title>
 	</ion-toolbar>
 </ion-header>
 
