--- a/src/app/pages/tax-calculation/tax-calculation.page.html
+++ b/src/app/pages/tax-calculation/tax-calculation.page.html
@@ -3,7 +3,7 @@
 		<ion-buttons (click)="backHome()" class="ion-padding-horizontal" slot="start">
 			<ion-icon size="large" color="light" name="arrow-back-outline"></ion-icon>
 		</ion-buttons>
-		<ion-title color="light">ការគណនាពន្ធ</ion-title>
+		<ion-title color="light">{{ 'TAX_CALCULATION.HEADER' | translate }}</ion-title>
 	</ion-toolbar>
 </ion-header>
 
@@ -16,7 +16,7 @@
 						<ion-icon name="receipt-outline"></ion-icon>
 					</div>
 					<ion-label>
-						គណនាលើពន្ធទូទៅ
+						{{ 'TAX_CALCULATION.BTN1' | translate }}
 					</ion-label>
 				</div>
 			</ion-card>
@@ -26,7 +26,7 @@
 						<ion-icon name="calculator-outline"></ion-icon>
 					</div>
 					<ion-label>
-						គណនាពន្ធលើប្រាក់បៀវត្សបុគ្គលិក
+						{{ 'TAX_CALCULATION.BTN2' | translate }}
 					</ion-label>
 				</div>
 			</ion-card>
