--- a/src/app/pages/general/general.page.html
+++ b/src/app/pages/general/general.page.html
@@ -10,7 +10,7 @@
 
     <ion-tab-button tab="tax">
       <ion-icon size="large" name="newspaper"></ion-icon>
-      <ion-label class="text-bold ion-no-margin">{{ 'GDT' | translate }}</ion-label>
+      <ion-label class="text-bold ion-no-margin">{{ 'GDT.HEADER' | translate }}</ion-label>
     </ion-tab-button>
 
   </ion-tab-bar>
